add entrypoint and runner script to image; fix setup of mondodb